--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "lucide-react": "0.263.1",
-    "recharts": "2.12.0"
+    "recharts": "2.12.0",
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
