--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.1",
     "lucide-react": "0.263.1",
     "recharts": "2.12.0",
-    "@google/genai": "latest"
+    "@google/genai": "latest",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
