--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
+node_modulesdist                                                            
 # Logs
 logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+*.log   
 node_modules
 dist
 dist-ssr
