--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-node_modulesdist                                                            
 # Logs
 logs
-*.log   
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
 dist
 dist-ssr
