--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "latest",
-    "firebase": "^12.6.0",
-    "lucide-react": "^0.263.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "recharts": "2.12.0"
+    "lucide-react": "0.263.1",
+    "recharts": "2.12.0",
+    "@google/genai": "latest",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
