updated gallery and products database issue

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_FIREBASE_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
 
 GEMINI_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
+VITE_GOOGLE_AI_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
