--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "lucide-react": "0.263.1",
-    "recharts": "2.12.0",
     "@google/genai": "latest",
-    "firebase": "^12.6.0"
+    "firebase": "^12.6.0",
+    "lucide-react": "0.263.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-loading-indicators": "^1.0.1",
+    "recharts": "2.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
