--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "latest",
+    "@google/generative-ai": "^0.24.1",
     "firebase": "^12.6.0",
     "lucide-react": "0.263.1",
     "react": "^18.3.1",
