tenant system added

--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-VITE_FIREBASE_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
+HOST=localhost
+PORT=3000
 
-GEMINI_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
-VITE_GOOGLE_AI_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
+VITE_FIREBASE_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
+VITE_FIREBASE_AUTH_DOMAIN=ecom-70d36.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=ecom-70d36
+VITE_FIREBASE_STORAGE_BUCKET=ecom-70d36.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=503757028124
+VITE_FIREBASE_APP_ID=1:503757028124:web:1d2ba37cc5098fe53ed8d9
+VITE_FIREBASE_MEASUREMENT_ID=G-Q0L2B8PZ50
+
