--- a/package.json
+++ b/package.json
@@ -8,29 +8,32 @@
     "start": "npm run dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "seed:admins": "tsx server/seedAdminUsers.ts"
   },
   "dependencies": {
     "@google/genai": "latest",
     "@google/generative-ai": "^0.24.1",
     "firebase": "^12.6.0",
+    "firebase-admin": "^12.7.0",
     "lucide-react": "0.263.1",
-    "react-hot-toast": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-loading-indicators": "^1.0.1",
     "recharts": "2.12.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.20",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.5.2",
     "jsdom": "^26.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^2.1.4"
