--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "E-Commerce-Solutions",
+  "name": "e-commerce-solutions",
   "private": true,
   "version": "2.4.1",
   "type": "module",
