--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ HOST=localhost
 PORT=3000
 
 VITE_FIREBASE_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
-VITE_FIREBASE_AUTH_DOMAIN=ecom-70d36.firebaseapp.com
+VITE_FIREBASE_AUTH_DOMAIN=systemnextit.com
 VITE_FIREBASE_PROJECT_ID=ecom-70d36
 VITE_FIREBASE_STORAGE_BUCKET=ecom-70d36.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=503757028124
