--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "e-commerce-solutions",
   "private": true,
   "version": "2.4.1",
