--- a/.env
+++ b/.env
@@ -1,15 +1,8 @@
-HOST=localhost
-PORT=3000
+PORT=5001
+MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
+MONGODB_DB_NAME=seven_days
+ALLOWED_ORIGINS=http://localhost:3000,http://demo.localhost:3000,http://amit.localhost:3000
+VITE_API_BASE_URL=http://localhost:5001
 
-VITE_FIREBASE_API_KEY=AIzaSyAAeDj0vikld55XggkJJLhzgH7LgRML5QI
-VITE_FIREBASE_AUTH_DOMAIN=ecom-70d36.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=ecom-70d36
-VITE_FIREBASE_STORAGE_BUCKET=ecom-70d36.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=503757028124
-VITE_FIREBASE_APP_ID=1:503757028124:web:1d2ba37cc5098fe53ed8d9
-VITE_FIREBASE_MEASUREMENT_ID=G-Q0L2B8PZ50
-
-# VITE_PRIMARY_DOMAIN=https://systemnextit.com
-
-VITE_PRIMARY_DOMAIN=http://localhost:3000
-VITE_DEFAULT_TENANT_SLUG=default
+VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
+VITE_DISABLE_REMOTE_SAVE=false
