--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,4 @@
 PORT=5001
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
 MONGODB_DB_NAME=seven_days
-ALLOWED_ORIGINS=http://localhost:5173
-FIREBASE_ADMIN_PROJECT_ID=
-FIREBASE_ADMIN_CLIENT_EMAIL=
-FIREBASE_ADMIN_PRIVATE_KEY=
+ALLOWED_ORIGINS=http://localhost:3000,http://demo.localhost:3000,http://amit.localhost:3000
