--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "lint": "tsc --noEmit",
-    "seed:admins": "tsx server/seedAdminUsers.ts"
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@google/genai": "latest",
     "@google/generative-ai": "^0.24.1",
-    "firebase": "^12.6.0",
-    "firebase-admin": "^12.7.0",
     "lucide-react": "0.263.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
