--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
+
+
+# local env file
 PORT=5001
 MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
 MONGODB_DB_NAME=seven_days
-ALLOWED_ORIGINS=https://systemnextit.com,https://demo.systemnextit.com,https://amit.systemnextit.com
-VITE_API_BASE_URL=https://systemnextit.com:5001
+ALLOWED_ORIGINS=http://localhost:3000,http://demo.localhost:3000,http://amit.localhost:3000
+
+VITE_API_BASE_URL=http://localhost:5001
 
 VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
 VITE_DISABLE_REMOTE_SAVE=false
