--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
+    "mongoose": "^9.0.1",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
   },
