--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-loading-indicators": "^1.0.1",
+    "react-loading-skeleton": "^3.5.0",
     "recharts": "2.12.0"
   },
   "devDependencies": {
