--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+#                                         .env
+# NODE_ENV=production
+# PORT=5001
+# MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
+# MONGODB_DB_NAME=seven_days
+# ALLOWED_ORIGINS=https://systemnextit.com,https://demo.systemnextit.com,http://localhost:3000
 
 
 # local env file
@@ -10,3 +16,5 @@ VITE_API_BASE_URL=http://localhost:5001
 
 VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
 VITE_DISABLE_REMOTE_SAVE=false
+
+
