--- a/.env
+++ b/.env
@@ -14,6 +14,8 @@ ALLOWED_ORIGINS=http://localhost:3000,http://demo.localhost:3000,http://amit.loc
 
 VITE_API_BASE_URL=http://localhost:5001
 
+API_BASE=http://localhost:5001/api
+
 VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
 VITE_DISABLE_REMOTE_SAVE=false
 
