notification sound added

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^9.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
@@ -31,6 +33,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.30",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^9.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
