--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-hot-toast": "^2.5.1",
     "react-loading-indicators": "^1.0.1",
     "react-loading-skeleton": "^3.5.0",
-    "recharts": "2.12.0"
+    "recharts": "2.12.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -31,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.14.0",
+    "@types/socket.io": "^3.0.1",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.20",
     "jsdom": "^26.0.0",
