--- a/.env
+++ b/.env
@@ -1,16 +1,25 @@
 
+
+VITE_API_BASE_URL=https://systemnextit.com
+VITE_PRIMARY_DOMAIN=systemnextit.com
+VITE_DEFAULT_TENANT_SLUG=default
+VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
+VITE_DISABLE_REMOTE_SAVE=false
+ALLOWED_ORIGINS=http://159.198.47.126:3000
+
+
 # # Production Environment Variables
 # # ===================================================
-# # NODE_ENV=production
-# # VITE_API_BASE_URL=https://systemnextit.com
-# # VITE_PRIMARY_DOMAIN=systemnextit.com
-# # MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
-# # MONGODB_DB_NAME=seven_days
-# # ALLOWED_ORIGINS=https://systemnextit.com,https://admin.systemnextit.com,https://admin.systemnextit.com
-# # API_BASE=https://systemnextit.com/api
-# # VITE_DEFAULT_TENANT_SLUG=default
-# # VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
-# # VITE_DISABLE_REMOTE_SAVE=false
+# NODE_ENV=production
+# VITE_API_BASE_URL=https://systemnextit.com
+# VITE_PRIMARY_DOMAIN=systemnextit.com
+# MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
+# MONGODB_DB_NAME=seven_days
+# ALLOWED_ORIGINS=https://systemnextit.com,https://admin.systemnextit.com,https://admin.systemnextit.com
+# API_BASE=https://systemnextit.com/api
+# VITE_DEFAULT_TENANT_SLUG=default
+# VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
+# VITE_DISABLE_REMOTE_SAVE=false
 # # ====================================================
 
 
