--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@tensorflow/tfjs": "^4.14.0",
     "axios": "^1.6.8",
     "bcryptjs": "^3.0.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
     "mongoose": "^9.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1",
