--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.1",
     "compression": "^1.8.1",
     "express": "^4.22.1",
