--- a/.env.production
+++ b/.env.production
@@ -16,7 +16,7 @@ JWT_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFt
 # ====================================================
 # CDN Configuration (optional - enables CDN for static assets and images)
 # ====================================================
-VITE_CDN_ENABLED=true
+VITE_CDN_ENABLED=false
 VITE_CDN_PROVIDER=cloudflare  # Options: cloudflare, cloudfront, bunnycdn, custom
 VITE_CDN_BASE_URL=https://cdn.systemnextit.com
 VITE_CDN_IMAGE_URL=https://images.systemnextit.com  # Optional, defaults to CDN_BASE_URL
