--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.14.0",
+    "@upstash/redis": "^1.35.8",
     "axios": "^1.6.8",
     "bcryptjs": "^3.0.3",
     "compression": "^1.7.4",
