--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@
 # local env file
 ADMIN_UI=https://systemnextit.com/admin
 PORT=5001
-MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
-MONGODB_DB_NAME=seven_days
+MONGODB_URI=mongodb+srv://webfaisalbd:R6fVp4V9hV33kYdZ@cluster0.fcyg3ew.mongodb.net
+
+MONGODB_DB_NAME=cws
+MONGODB_DB_PASSWORD=R6fVp4V9hV33kYdZ
 ALLOWED_ORIGINS=https://systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms
 
 VITE_API_BASE_URL=https://systemnextit.com
