Remove green circle from mobile search bar

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # local env file
 ADMIN_UI=https://systemnextit.com/admin
 PORT=5001
-MONGODB_URI=mongodb+srv://webfaisalbd:R6fVp4V9hV33kYdZ@cluster0.fcyg3ew.mongodb.net
+MONGODB_URI=mongodb://webfaisalbd:R6fVp4V9hV33kYdZ@127.0.0.1:27017/cws?authSource=admin
 
 MONGODB_DB_NAME=cws
 MONGODB_DB_PASSWORD=R6fVp4V9hV33kYdZ
