--- a/backend/.env.production
+++ b/backend/.env.production
@@ -5,7 +5,7 @@ MONGODB_DB_NAME=seven_days
 ALLOWED_ORIGINS=https://systemnextit.com,https://see.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms
 
 VITE_API_BASE_URL=https://systemnextit.com
-
+VITE_GEMINI_API_KEY=AIzaSyDDNwt5Leaks1hO_Kk7Ag-DmuzLZLsiLIA
 API_BASE=https://systemnextit.com/api
 
 VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
