--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ MONGODB_URI=mongodb://webfaisalbd:R6fVp4V9hV33kYdZ@127.0.0.1:27017/cws?authSourc
 
 MONGODB_DB_NAME=cws
 MONGODB_DB_PASSWORD=R6fVp4V9hV33kYdZ
-ALLOWED_ORIGINS=https://systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000
+ALLOWED_ORIGINS=https://systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000
 
 VITE_API_BASE_URL=https://systemnextit.com
 
