--- a/backend/.env.loacal
+++ b/backend/.env.loacal
@@ -3,6 +3,7 @@ PORT=5001
 MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
 MONGODB_DB_NAME=seven_days
 ALLOWED_ORIGINS=http://localhost:3001,http://localhost:3000,http://admin.localhost:3000
+ALLOWED_ORIGINS=https://systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000
 
 VITE_API_BASE_URL=http://localhost:5001
 
