fix: wildcard CORS for all subdomains

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ MONGODB_DB_NAME=your_db_name
 MONGODB_DB_PASSWORD=your_db_password
 
 # CORS Configuration
-ALLOWED_ORIGINS=https://yourdomain.com,http://localhost:3000
+ALLOWED_ORIGINS=https://systemnextit.com,https://opbd.systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000,*.systemnextit.com
 
 # API Configuration
 VITE_API_BASE_URL=https://yourdomain.com
