--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
-    "@upstash/redis": "^1.32.0",
     "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.1",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
+    "@upstash/redis": "^1.32.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "dotenv": "^16.4.7",
@@ -47,18 +47,19 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^1.4.11",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^1.4.11",
     "@types/node": "^22.14.0",
     "@types/socket.io": "^3.0.1",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.1.2",
     "jsdom": "^26.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
+    "vite": "^6.4.1",
     "vitest": "^2.1.4"
   }
 }
