--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "recharts": "2.12.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind": "^4.0.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
