--- a/backend/.env.loacal
+++ b/backend/.env.loacal
@@ -1,11 +1,9 @@
 
 PORT=5001
-MONGODB_URI=mongodb+srv://kamalmojumdar698_db_user:7qXvaLGRw6BItks1@cluster0.rqhicza.mongodb.net/
+MONGODB_URI=mongodb://webfaisalbd:R6fVp4V9hV33kYdZ@159.198.47.126:27017/cws?authSource=admin
 MONGODB_DB_NAME=seven_days
 ALLOWED_ORIGINS=http://localhost:3001,http://localhost:3000,http://admin.localhost:3000
-ALLOWED_ORIGINS=https://systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000
-
-
+ALLOWED_ORIGINS=https://systemnextit.com,https://opbd.systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000,*.systemnextit.com,https://cartnget.shop,https://admin.cartnget.shop,https://www.cartnget.shop,*.cartnget.shop
 
 API_BASE=http://localhost:5001/api
 
