--- a/backend/.env.production
+++ b/backend/.env.production
@@ -8,8 +8,7 @@ MONGODB_URI=mongodb://webfaisalbd:R6fVp4V9hV33kYdZ@127.0.0.1:27017/cws?authSourc
 
 MONGODB_DB_NAME=cws
 MONGODB_DB_PASSWORD=R6fVp4V9hV33kYdZ
-ALLOWED_ORIGINS=https://systemnextit.com,https://opbd.systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000,*.systemnextit.com
-
+ALLOWED_ORIGINS=https://systemnextit.com,https://opbd.systemnextit.com,https://superadmin.systemnextit.com,https://cdn.systemnextit.com,http://localhost:3001,http://localhost:3000,https://7w2rb0cn-3000.asse.devtunnels.ms,http://admin.localhost:3000,*.systemnextit.com,https://cartnget.shop,https://admin.cartnget.shop,https://www.cartnget.shop,*.cartnget.shop
 API_BASE=https://systemnextit.com/api
 
 VITE_REMOTE_SAVE_DEBOUNCE_MS=1200
