--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,18 @@ dist
 dist-ssr
 *.local
 
+# Environment files (keep examples)
+.env
+.env.*
+!.env.example
+!.env.*.example
+
+# Backend envs (backend has its own .gitignore too, but this is a safe umbrella)
+backend/.env
+backend/.env.*
+!backend/.env.example
+!backend/.env.*.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
